--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello Bulayan!</p>
-    <p>Hello world!</p>
+    <img src="./assets/Bulayan.jpg" alt="">
 </body>
 </html>
